--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         MDBootstrap</h1>
       <h5 class="animated fadeIn mb-3">Thank you for using our product. We're glad you're with us.</h5>
 
-      <p class="animated fadeIn text-muted">MDB Team</p>
+      <p class="animated fadeIn text-muted">Hello</p>
     </div>
   </div>
   <!-- /Start your project here-->
